implemented new rate and sw filters

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -9,7 +9,6 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from scipy.io import loadmat\n",
     "from pathlib import Path\n",
     "\n",
     "from recording import Recording\n",
@@ -18,24 +17,49 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set_style(\"whitegrid\")\n",
-    "import numpy as np\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.ndimage import uniform_filter1d\n",
     "\n",
     "# global settings\n",
     "params = {\n",
-    "    'bin_size'      : 0.1,   # bin size in s\n",
-    "    'thresh_rate'   : 1,     # min firing rate in Hz\n",
-    "    'thresh_sw'     : 0.5,   # min spike width in ms\n",
-    "    'thresh_trials' : 0.9,   # number of trials to keep in %\n",
-    "    'scoring'       : 'r2',  # see https://scikit-learn.org/stable/modules/model_evaluation.html\n",
-    "    'signal'        : 'fr',\n",
+    "    # bin size [s]\n",
+    "    'bin_size'        : 0.2,\n",
+    "\n",
+    "    # thresholds for source (src) and target (trg) population\n",
+    "    # note: `None`: no upper/lower limit\n",
+    "    # note: for within-region analysis, only source thresholds apply\n",
+    "\n",
+    "    # firing rate [Hz] interval\n",
+    "    'rate_src': (1, None),\n",
+    "    'rate_trg': (1, None),\n",
+    "\n",
+    "    # spike width [ms] interval\n",
+    "    'spike_width_src': (None, None),\n",
+    "    'spike_width_trg': (  .5, None),\n",
+    "\n",
+    "    # percentage of trials to be covered\n",
+    "    # note: Since the valid trial range for neurons may differ greatly, we choose a percentage of trials\n",
+    "    #       that we want to keep (0.9 = 90 %). Then, we drop neurons until the remaining neurons\n",
+    "    #       cover at least this part of the maximum trial range.\n",
+    "    'perc_trials': 0.9,\n",
+    "\n",
+    "    # score reported in the output\n",
+    "    # note: The definition of the score does not affect definition of the loss function\n",
+    "    #       and therefore does not affect the model parameters.\n",
+    "    # note: see https://scikit-learn.org/stable/modules/model_evaluation.html for available scorers\n",
+    "    'scoring': 'r2',\n",
     "}\n",
     "\n",
     "# define trial epochs \n",
     "# epoch_name : (start, end, alignment)\n",
-    "#              note that this defines the half-open interval [start, end)\n",
-    "#              note that lick times may fall between bins, because bins are aligned to cue\n",
+    "# note:\n",
+    "#   (i): Epochs define the half-open interval [start, end)\n",
+    "#  (ii): Lick times may fall between bins, because bins are aligned to cue\n",
+    "# (iii): Default epoch ('all') defined as ['cue' - 2 s, 'lick' + 2 s)\n",
+    "#        Only complete bins are kept. For example, if bin_size = 0.2 and first_lick = 1.81,\n",
+    "#        then the last bin in this trial is defined as [1.98, 2.00)\n",
     "epochs = {\n",
     "    'all'       : (None, None, 'cue'), # None only works with 'cue' alignment\n",
     "    'pre_cue'   : (-.6,  .0,   'cue'),\n",
@@ -43,7 +67,7 @@
     "    'post_cue2' : ( .6, 1.2,   'cue'),\n",
     "    'pre_lick'  : (-.6,  .0,  'lick'),\n",
     "    'post_lick' : ( .0,  .6,  'lick'),\n",
-    "}"
+    "}      "
    ]
   },
   {
@@ -110,11 +134,11 @@
     "\n",
     "# subtract baseline\n",
     "dfx_bin0 = utl.subtract_baseline(dfx_bin, rec1.df_spk)\n",
-    "dfy_bin0 = utl.subtract_baseline(dfy_bin, rec2.df_spk)\n",
+    "dfy_bin0 = utl.subtract_baseline(dfy_bin, rec1.df_spk if rec2 is None else rec2.df_spk)\n",
     "\n",
-    "# # optional: filter some epoch\n",
-    "# dfx_bin0 = utl.select_epoch(dfx_bin0, epochs['all'], rec1.df_trl)\n",
-    "# dfy_bin0 = utl.select_epoch(dfy_bin0, epochs['all'], rec2.df_trl)"
+    "# optional: filter some epoch\n",
+    "dfx_bin0_epo = utl.select_epoch(dfx_bin0, epochs['pre_lick'], rec1.df_trl)\n",
+    "dfy_bin0_epo = utl.select_epoch(dfy_bin0, epochs['pre_lick'], rec1.df_trl if rec2 is None else rec2.df_trl)"
    ]
   },
   {
@@ -183,7 +207,10 @@
     "    print('Invalid rood dir. No access to network drive?')\n",
     "\n",
     "else: \n",
-    "    p_dirs = [ p for p in p_root.glob('*/*/') if p.is_dir() ]\n",
+    "    p_dirs = \\\n",
+    "        [ *p_root.glob('ALM_ALM/*/') ] + \\\n",
+    "        [ *p_root.glob('ALM_STR/*/') ] + \\\n",
+    "        [ *p_root.glob('ALM_Thal/*/') ]\n",
     "\n",
     "name2region = {\n",
     "    'MK22_20230301_2H2_g0_JRC_units_probe1.mat' : 'ALM1',\n",
@@ -211,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## plot response, binned at 1 ms"
+    "## precalculate bins"
    ]
   },
   {
@@ -220,20 +247,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for p_mat in p_root.glob('**/*mat'):\n",
-    "    \n",
-    "    # load recording and create missing dataframes\n",
-    "    print(p_mat)\n",
+    "for bin_size in [.2, 1e-3]:\n",
+    "    print(bin_size)\n",
+    "    for p_mat in p_root.glob('**/*mat'):\n",
     "\n",
-    "    rec = Recording(p_mat, calc_psth=True)\n",
-    "    rec.plot_psth(path=rec.path_psth.with_suffix('.png'))"
+    "        print(p_mat)\n",
+    "        rec = Recording(p_mat)\n",
+    "\n",
+    "        rec.path_bin = rec._path_name('bin{}.hdf'.format(bin_size))\n",
+    "        df_bin = rec._assign_df(rec.path_bin, utl.bin_spikes, {'df_spk': rec.df_spk, 'df_trl': rec.df_trl, 'bin_size': bin_size})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "bin_size = 1e-3\n",
+    "for p_mat in p_root.glob('**/*mat'):\n",
+    "\n",
+    "    print(p_mat)\n",
+    "    rec = Recording(p_mat)\n",
+    "\n",
+    "    rec.path_bin = rec._path_name('bin{}.hdf'.format(bin_size))\n",
+    "    df_bin = rec._assign_df(rec.path_bin, utl.bin_spikes, {'df_spk': rec.df_spk, 'df_trl': rec.df_trl, 'bin_size': bin_size})\n",
+    "    \n",
+    "    df_bin = df_bin.apply(uniform_filter1d, axis=0, size=50)\n",
+    "    # utl.plot_mean_response(df_bin, path=rec._path_name('psth1ms.png'))\n",
+    "\n",
+    "    break\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## fits"
+    "## screen settings"
    ]
   },
   {
@@ -242,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def proc_wrapper(p_out, params, recA, recB):\n",
+    "def proc_wrapper(p_out, params, recX, recY):\n",
     "\n",
     "    # create folder\n",
     "    p_out.mkdir(exist_ok=True, parents=True)\n",
@@ -251,18 +302,18 @@
     "    p_json = p_out / 'params.json'\n",
     "    if p_json.exists():\n",
     "        print(f'params.json found. Skipping {p_out}')\n",
-    "        return \n",
+    "        # return \n",
     "    \n",
     "    # load data\n",
-    "    dfx_bin, dfy_bin = utl.select_data(recA, rec2=recB, params=params)\n",
+    "    dfx_bin, dfy_bin = utl.select_data(recX, rec2=recY, params=params)\n",
     "\n",
     "    if params['subtract_baseline']:\n",
-    "        dfx_bin = utl.subtract_baseline(dfx_bin)\n",
-    "        dfy_bin = utl.subtract_baseline(dfy_bin)\n",
+    "        dfx_bin = utl.subtract_baseline(dfx_bin, recX.df_spk)\n",
+    "        df_spk = recX.df_spk if recY is None else recY.df_spk\n",
+    "        dfy_bin = utl.subtract_baseline(dfy_bin, df_spk)\n",
     "\n",
     "    # linear regression (= ridge with alpha=0)\n",
     "    lin_mods = utl.ridge_regression(dfx_bin, dfy_bin, scoring=params['scoring'], alphas=[0])\n",
-    "    lin_mod = lin_mods.best_estimator_\n",
     "    utl.save_cv_results(lin_mods, path=p_out / 'reg_linear.parquet')\n",
     "\n",
     "    # ridge regression\n",
@@ -272,7 +323,6 @@
     "\n",
     "    # RRR\n",
     "    rr_mods = utl.reduced_rank_regression(dfx_bin, dfy_bin, scoring=params['scoring'])\n",
-    "    rr_mod = rr_mods.best_estimator_\n",
     "    utl.save_cv_results(rr_mods, path=p_out / 'reg_rrr.parquet')\n",
     "\n",
     "    # plot regressions\n",
@@ -384,7 +434,7 @@
     "        'scoring'           : 'r2', \n",
     "        'subtract_baseline' :  False\n",
     "        },\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -420,7 +470,6 @@
     "        # regB\n",
     "        p_out = p_dir / f'{name}/{regB}'\n",
     "        proc_wrapper(p_out, params, recB, None)\n",
-    "        \n",
     "        "
    ]
   },
@@ -428,7 +477,217 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## plot"
+    "## refine settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_params = {\n",
+    "    # bin 0.2\n",
+    "    'all_depth_0.2': {\n",
+    "        'bin_size'          : 0.2, \n",
+    "        'thresh_sw'         : 0.5,  \n",
+    "        'thresh_rate'       : 1,    \n",
+    "        'thresh_trials'     : 0.9,  \n",
+    "        'scoring'           : 'r2', \n",
+    "        'subtract_baseline' :  True\n",
+    "        },\n",
+    "    'all_depth_raw_0.2': {\n",
+    "        'bin_size'          : 0.2,  \n",
+    "        'thresh_sw'         : 0.5,  \n",
+    "        'thresh_rate'       : 1,    \n",
+    "        'thresh_trials'     : 0.9,  \n",
+    "        'scoring'           : 'r2', \n",
+    "        'subtract_baseline' :  False\n",
+    "        },\n",
+    "}\n",
+    "\n",
+    "def proc_wrapper2(p_out, params, recX, recY):\n",
+    "\n",
+    "    # create folder\n",
+    "    p_out.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "    # path for params.json\n",
+    "    p_csv = p_out / 'pred_ridge_scores_epo_all.csv'\n",
+    "    if p_csv.exists():\n",
+    "        print(f'{p_csv.name} found. Skipping {p_out}')\n",
+    "        return \n",
+    "    \n",
+    "    # load data\n",
+    "    dfx_bin, dfy_bin = utl.select_data(recX, rec2=recY, params=params)\n",
+    "\n",
+    "    if params['subtract_baseline']:\n",
+    "        dfx_bin = utl.subtract_baseline(dfx_bin, recX.df_spk)\n",
+    "        df_spk = recX.df_spk if recY is None else recY.df_spk\n",
+    "        dfy_bin = utl.subtract_baseline(dfy_bin, df_spk)\n",
+    "\n",
+    "    ridge_mods = utl.ridge_regression(dfx_bin, dfy_bin, scoring=params['scoring'], alphas=np.logspace(-13, 13, 27))\n",
+    "    ridge_mod = ridge_mods.best_estimator_\n",
+    "\n",
+    "    d_scores = {}\n",
+    "    for n, epo in epochs.items():\n",
+    "        print(f'running {n}')\n",
+    "\n",
+    "        # select subset of data\n",
+    "        dfx_bin_epo = utl.select_epoch(dfx_bin, epo, recX.df_trl)\n",
+    "        dfy_bin_epo = utl.select_epoch(dfy_bin, epo, recX.df_trl if recY is None else recY.df_trl)\n",
+    "\n",
+    "        # # fit ridge to subset\n",
+    "        # ridge_mods = utl.ridge_regression(dfx_bin_epo, dfy_bin_epo, scoring=params['scoring'], alphas=np.logspace(-13, 13, 27))\n",
+    "        # ridge_mod = ridge_mods.best_estimator_\n",
+    "\n",
+    "        # prediction\n",
+    "        _, scores = utl.get_ypred(dfx_bin_epo, dfy_bin_epo, ridge_mod, scoring=params['scoring'])\n",
+    "        \n",
+    "        # store\n",
+    "        d_scores['{}_{}'.format(params['scoring'], n)] = scores\n",
+    "\n",
+    "    # save\n",
+    "    pd.DataFrame(data=d_scores).to_csv(p_csv)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, params in d_params.items():\n",
+    "    print(f'>>>> starting parameter set {name}....')\n",
+    "\n",
+    "    for p_dir in p_dirs:\n",
+    "\n",
+    "        print(p_dir)\n",
+    "\n",
+    "        # load recordings\n",
+    "        p_matA, p_matB = [ *p_dir.glob('*.mat')]\n",
+    "        recA, recB = Recording(p_matA), Recording(p_matB)\n",
+    "        regA, regB = name2region[p_matA.name], name2region[p_matB.name]\n",
+    "\n",
+    "        # regA -> regB\n",
+    "        p_out = p_dir / f'{name}/{regA}_{regB}'\n",
+    "        proc_wrapper2(p_out, params, recA, recB)\n",
+    "\n",
+    "        # regB -> regA\n",
+    "        p_out = p_dir / f'{name}/{regB}_{regA}'\n",
+    "        proc_wrapper2(p_out, params, recB, recA)\n",
+    "\n",
+    "        # regA\n",
+    "        p_out = p_dir / f'{name}/{regA}'\n",
+    "        proc_wrapper2(p_out, params, recA, None)\n",
+    "\n",
+    "        # regB\n",
+    "        p_out = p_dir / f'{name}/{regB}'\n",
+    "        proc_wrapper2(p_out, params, recB, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_scores(ps_csv, params):\n",
+    "\n",
+    "    dfs = []\n",
+    "    for p_csv in ps_csv:\n",
+    "\n",
+    "        folder = p_csv.parent.name\n",
+    "        rec = p_csv.parent.parent.parent.name\n",
+    "        pro = p_csv.parent.parent.parent.parent.name\n",
+    "        ani = rec.split('_')[0]\n",
+    "        df = pd.read_csv(p_csv, index_col=0)\n",
+    "\n",
+    "        for col in df:\n",
+    "            \n",
+    "            dfs.append(pd.DataFrame(data={\n",
+    "                'unit': df.index,\n",
+    "                'score': df.loc[:, col],\n",
+    "                'dscore': df.loc[:, col] - df.iloc[:, 0],\n",
+    "                'epoch': col.replace('{}_'.format(params['scoring']), ''),\n",
+    "                'region': folder.replace(folder.split('_')[0] + '_', ''),\n",
+    "                'interaction': folder,\n",
+    "                'recording': rec,\n",
+    "                'animal': ani,\n",
+    "                'probes': pro,\n",
+    "            })\n",
+    "            )\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    df.loc[:, 'interaction_'] = df.loc[:, 'interaction'].map(lambda x: x.replace('ALM1', 'ALM').replace('ALM2', 'ALM'))\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n, params in d_params.items():\n",
+    "    print(n)\n",
+    "    \n",
+    "    p_plot = p_root / 'plots/'\n",
+    "    p_plot.mkdir(exist_ok=True)\n",
+    "\n",
+    "    p_csvs = [ *p_root.glob(f'**/{n}/**/pred_ridge_scores_epo.csv') ]\n",
+    "    if not p_csvs:\n",
+    "        print(f'No CSV files found: skipping {n}')\n",
+    "        continue\n",
+    "    \n",
+    "    df = load_scores(p_csvs, params)\n",
+    "    break\n",
+    "\n",
+    "    # g = sns.catplot(df, x='interaction', y='score', col='probes', hue='recording', sharex=False, facet_kws={'ylim': (-1, 1)}, dodge=True)\n",
+    "    # g.fig.savefig(p_plot / f'scores_{name}.png')\n",
+    "    # plt.close(g.fig)\n",
+    "\n",
+    "    # df.loc[:, '_sort'] = df.loc[:, 'interaction_'].str.len()\n",
+    "    # d = df.sort_values(by=['_sort', 'interaction_'])\n",
+    "    # fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "    # sns.stripplot(data=d, ax=ax, x='interaction_', y='score', hue='recording', dodge=True)\n",
+    "    # ax.set_ylim((-1, 1))\n",
+    "    # fig.savefig(p_plot / f'scores_pooled_{name}.png')\n",
+    "    # plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = df.loc[ df.loc[:, 'epoch'] != 'all' ]\n",
+    "\n",
+    "cols = 'interaction_'\n",
+    "gr = df_.groupby(cols)\n",
+    "nrows = len(gr.groups.keys())\n",
+    "fig, axarr = plt.subplots(figsize=(8, nrows*4), nrows=nrows)\n",
+    "\n",
+    "for ax, (k, d) in zip(axarr, gr):\n",
+    "\n",
+    "    g = sns.stripplot(data=d, ax=ax, x='epoch', y='dscore', hue='recording', dodge=True)\n",
+    "    sns.move_legend(g, \"upper left\", bbox_to_anchor=(1, 1))\n",
+    "\n",
+    "    ax.set_ylim(-1, 1)\n",
+    "    ax.set_title(k)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "fig.savefig('tmp_dscore_ind.png')\n",
+    "    # g = sns.catplot(d, x='epoch', y='dscore', hue='recording', sharex=False, facet_kws={'ylim': (-1, 1)}, dodge=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### plot"
    ]
   },
   {
