added trial type filter

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -30,7 +30,7 @@
     "    # thresholds for source (src) and target (trg) population\n",
     "    # note: `None`: no upper/lower limit\n",
     "    # note: for within-region analysis, only source thresholds apply\n",
-    "\n",
+    "    \n",
     "    # firing rate [Hz] interval\n",
     "    'rate_src': (1, None),\n",
     "    'rate_trg': (1, None),\n",
@@ -38,6 +38,11 @@
     "    # spike width [ms] interval\n",
     "    'spike_width_src': (None, None),\n",
     "    'spike_width_trg': (  .5, None),\n",
+    "\n",
+    "    # trial types (list of strings)\n",
+    "    # note: Define strings to match beginning of `unit(1).Behavior.stim_type_name` strings.\n",
+    "    #       To include all trials, set list empty\n",
+    "    'type_incl': [ 'l_n', ],\n",
     "\n",
     "    # percentage of trials to be covered\n",
     "    # note: Since the valid trial range for neurons may differ greatly, we choose a percentage of trials\n",
