syn example notebook

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -16,7 +16,6 @@
     "from src.recording import Recording\n",
     "from src.probe import ZProbe, YProbe\n",
     "from src import (\n",
-    "    recording_operations as rec_ops,\n",
     "    visualization as vis,\n",
     "    regression_models as reg,\n",
     ")"
@@ -44,11 +43,10 @@
     "- `spike_width_trg : (float, float)`\\\n",
     "Spike width filter in ms applied to the target (trg) population\n",
     "- `trial_overlap : float`\\\n",
-    "Percentage of trials filter applied to neurons.\n",
-    "Since the valid trial range for individual neurons may differ greatly, \n",
-    "we choose a fraction of trials that we want to keep (0.9 = 90 %).\n",
-    "Then, we drop neurons until the remaining neurons cover at least\n",
-    "this fraction of the maximum available trial range.\n",
+    "Betweeen 0 and 1.\n",
+    "Filter units and trials based on `Trial_info.Trial_range_to_analyze`. \n",
+    "Choose first and last trial where `trial_overlap` units are active and discard units that do not cover this range.\n",
+    "Also drop trials outside this range.\n",
     "- `type_incl: list of str`\\\n",
     "Trial type filter applied to trials.\n",
     "Strings are matched with beginning of `unit(1).Behavior.stim_type_name` strings.\n",
@@ -62,9 +60,14 @@
     "- `subtract_baseline : bool`\\\n",
     "whether or not to subtract baseline.\n",
     "This subtracts the average firing rate during pre cue period per trial\n",
+    "- `baseline_period : (float, float)`\\\n",
+    "Defines the baseline period in seconds relative to cue onset. Must be defined if `subtract_baseline` is `True`.\n",
     "- `min_units_src : int`\\\n",
     "Minimum number of units in source population.\n",
     "This will skip the analysis in batch mode.\n",
+    "- `trial_groups: (str, list of float)`\\\n",
+    "The first element (`str`) defines the column name in the `trial_info` table,\n",
+    "the second element (`list of float`) defines the time intervals used to group trials.\n",
     "\n",
     "Note that when defining intervals `(float, float)`, set one of the values to `None`\n",
     "for no upper/lower limit.\n",
@@ -74,8 +77,6 @@
     "- `first_lick : (float, float)`\\\n",
     "Lick time filter in seconds applied to trials.\n",
     "This is the time of the first lick relative to cue onset.\n",
-    "- `lick_groups: list of float`\\\n",
-    "Define intervals of lick times in seconds relative to cue for trial classification.\n",
     "\n",
     "## Settings specific to YProbe\n",
     "For the `Y` unit structure matlab file, the following settings are available:\n",
@@ -104,10 +105,11 @@
     "    'rate_trg': (1, None),\n",
     "    'spike_width_src': (None, None), \n",
     "    'spike_width_trg': (  .5, None),\n",
-    "    'trial_overlap': 0.0,             \n",
+    "    'trial_overlap': 0.7,             \n",
     "    'type_incl': [ 'l_n', ],\n",
     "    'scoring': 'r2',\n",
     "    'subtract_baseline': True,\n",
+    "    'baseline_period': (-2, 0), \n",
     "    'min_units_src': 5,\n",
     "}\n",
     "\n",
@@ -115,7 +117,7 @@
     "params_z = params_global.copy()\n",
     "params_z.update({\n",
     "    'first_lick' : (None, None),\n",
-    "    'lick_groups': [ 0, 0.6, 1.2, 2.4, 4.8 ],\n",
+    "    'trial_groups': ('dt_lck', [ 0, 0.6, 1.2, 2.4, 4.8 ]),\n",
     "})\n",
     "\n",
     "# parameters for Y unit structure\n",
@@ -124,6 +126,9 @@
     "    'only_good' : True,\n",
     "    'area_code_A': {7, 8},\n",
     "    'area_code_B': {3, 17},\n",
+    "    'water_ratio': (None, 3),\n",
+    "    'reward_delay': (.4, None),\n",
+    "    'trial_groups': ('dt_rew', [ 0, 1.0, 2.0 ]),\n",
     "})"
    ]
   },
@@ -206,11 +211,11 @@
     "params = params_z\n",
     "\n",
     "# load individual probes\n",
-    "data_root = Path(r'/home/nico/remmina/data/dual_ephys/')\n",
+    "data_root = Path(r'C:\\temp\\dual_ephys')\n",
     "probe1 = Probe(data_root / 'ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_JRC_units.mat',\n",
-    "               lick_groups=params['lick_groups'], bin_size=0.001, force_overwrite=True)\n",
+    "               trial_groups=params['trial_groups'], bin_size=params['bin_size'], force_overwrite=False)\n",
     "probe2 = Probe(data_root / 'ALM_STR/ZY78_20211015/ZY78_20211015NP_g0_imec0_JRC_units.mat',\n",
-    "               lick_groups=params['lick_groups'], bin_size=0.001, force_overwrite=True)\n",
+    "               trial_groups=params['trial_groups'], bin_size=params['bin_size'], force_overwrite=False)\n",
     "\n",
     "# combine probes into a recording with descriptive names\n",
     "probes = {\n",
@@ -220,7 +225,7 @@
     "rec = Recording(probes)\n",
     "\n",
     "# display trial information for ZProbe\n",
-    "vis.plot_trial_infos_z(rec.df_trl)"
+    "vis.plot_trial_infos(rec.df_trl)"
    ]
   },
   {
@@ -290,11 +295,11 @@
     "data_root = Path(r'C:\\temp\\trip_ephys')\n",
     "\n",
     "probe1 = Probe(data_root / 'J44-20221008_g0_imec0_JRC_units.mat',\n",
-    "               bin_size=params['bin_size'], force_overwrite=False)\n",
+    "               trial_groups=params['trial_groups'], bin_size=params['bin_size'], force_overwrite=False)\n",
     "probe2 = Probe(data_root / 'J44-20221008_g0_imec1_JRC_units.mat',\n",
-    "               bin_size=params['bin_size'], force_overwrite=False)\n",
+    "               trial_groups=params['trial_groups'], bin_size=params['bin_size'], force_overwrite=False)\n",
     "probe3 = Probe(data_root / 'J44-20221008_g0_imec2_JRC_units.mat',\n",
-    "               bin_size=params['bin_size'], force_overwrite=False)\n",
+    "               trial_groups=params['trial_groups'], bin_size=params['bin_size'], force_overwrite=False)\n",
     "\n",
     "probes = {\n",
     "    'imec0': probe1,\n",
@@ -304,7 +309,7 @@
     "rec = Recording(probes)\n",
     "\n",
     "# display trial information for YProbe\n",
-    "vis.plot_trial_infos_y(rec.df_trl)"
+    "vis.plot_trial_infos(rec.df_trl)"
    ]
   },
   {
@@ -334,9 +339,9 @@
     "if len(X.columns) < params['min_units_src']:\n",
     "    print('WARNING: Too few units in source recording!')\n",
     "\n",
-    "# optional: filter some epoch\n",
-    "X = rec.select_epoch(X, epochs['pre_cue'])\n",
-    "Y = rec.select_epoch(Y, epochs['pre_cue'])"
+    "# # optional: filter some epoch\n",
+    "# X = rec.select_epoch(X, epochs['pre_cue'])\n",
+    "# Y = rec.select_epoch(Y, epochs['pre_cue'])"
    ]
   },
   {
@@ -460,18 +465,47 @@
    "source": [
     "# choose parameters to filter data for mode calculation\n",
     "params_mode = {\n",
-    "    'bin_size': 0.1,\n",
-    "    'rate_src': (1, None), \n",
-    "    'spike_width_src': (None, None), \n",
-    "    'trial_overlap': 0.9,             \n",
-    "    'first_lick' : (None, None),\n",
+    "    'bin_size': 0.2,\n",
     "    'type_incl': [ 'l_n', ],\n",
+    "    'subtract_baseline': True,\n",
     "}\n",
     "\n",
-    "X = rec_ops.filter_and_bin(rec1, params_mode)\n",
-    "df_ramp = rec_ops.get_ramp_mode(X, rec1.df_trl, group='lick_group')\n",
-    "vis.plot_mode(df_ramp)"
+    "# define modes via their intervals\n",
+    "modes = {\n",
+    "    'ramp': {\n",
+    "        'interval_1': ('dt_cue', -0.2, 0),\n",
+    "        'interval_2': ('dt_rew', -0.2, 0),\n",
+    "    },\n",
+    "    'cue': {\n",
+    "        'interval_1': ('dt_cue', -0.2, 0),\n",
+    "        'interval_2': ('dt_cue', 0, 0.2),\n",
+    "    },\n",
+    "    'reward': {\n",
+    "        'interval_1': ('dt_rew', -0.2, 0),\n",
+    "        'interval_2': ('dt_rew', 0, 0.2),\n",
+    "    },\n",
+    "}    \n",
+    "\n",
+    "# select one of the modes\n",
+    "mode = modes['cue']\n",
+    "\n",
+    "# use data selection method described above, but merge src and trg data\n",
+    "probe_names = rec.df_unt.loc[:, 'probe'].unique()\n",
+    "X, Y = rec.select_data_probes(probe_names, probe_names, params_mode)\n",
+    "Z = pd.concat([X, Y], axis=1)\n",
+    "\n",
+    "# calculate and plot ramping mode\n",
+    "df_ramp = rec.get_ramp_mode(Z, mode['interval_1'], mode['interval_2'])\n",
+    "vis.plot_mode(df_ramp, group=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7323f1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -483,6 +517,10 @@
    "display_name": "comm_sub",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
