--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -468,6 +468,7 @@
     "    'bin_size': 0.2,\n",
     "    'type_incl': [ 'l_n', ],\n",
     "    'subtract_baseline': True,\n",
+    "    'baseline_period': (-2, 0),\n",
     "}\n",
     "\n",
     "# define modes via their intervals\n",
